<resources>
    <string name="app_name">eCom Store</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy anything online.</string>
    <string name="join_now">Join Now</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I’m an Admin</string>
    <string name="i_m_not_an_admin">I’m not an Admin</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="please_wait_while_credentials_checked">Please wait , while credentials Checked..</string>
    <string name="Login_Admin">Login as Admin</string>

    <string name="title_activity_user_home" translatable="false">UserHomeActivity</string>
    <string name="PermissionDenied">Permission Denied</string>
    <string name="isert_error_msg">Please insert at least one image!</string>
    <string name="TitleisRequired">Title is Required</string>
    <string name="Price_is_Required">Price is Required</string>
    <string name="Quantity_is_Required">Quantity is Required</string>
    <string name="description_is_Required">description is Required</string>
    <string name="Product_Uploaded">Product Uploaded</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="Delete_Product">Delete Product</string>
    <string name="Please_wait_while_Deleting_Product">Please wait while Deleting Product…</string>
    <string name="Please_install_a_maps_application">Please install a maps application</string>
    <string name="ORDER_APPROVED_long_click_to_delivery">ORDER APPROVED long click to delivery</string>
    <string name="Expected_delivery">Expected delivery</string>
    <string name="ORDER_DELIVERED">ORDER IS DELIVERED</string>
    <string name="ORDER_APPROVED">ORDER IS APPROVED</string>
    <string name="You_Want_To_Delivery_This_Order">You Want To Deliver This Order ?</string>
    <string name="Order_Delivery">Order Delivery</string>
    <string name="Delivery">Delivery</string>
    <string name="No">No</string>
    <string name="InProcessing">InProcessing</string>
    <string name="Shipped">Shipped</string>
    <string name="Delivered">Delivered</string>
    <string name="Qty">Qty:</string>
    <string name="PhoneisEmpty">Phone is Empty!</string>
    <string name="Phone_is_incorrect">Phone is incorrect!</string>
    <string name="Password_is_Empty">Password is Empty!</string>
    <string name="User_Login">User Login</string>
    <string name="Please_wait_while_Authentication_checked">Please wait while Authentication checked…</string>
    <string name="password_incorrect">password incorrect</string>
    <string name="Login_Failed_You_should_have_account">Login Failed, You should have account</string>
    <string name="Network_error_please_try_again_latter">Network error please try again later..</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="Enter_Your_Phone_Number">Enter Your Phone Number</string>
    <string name="OTP_Request">OTP Request</string>
    <string name="Wait_till_we_send_OTP_Code">Wait till we send OTP Code…</string>
    <string name="Get_Code">Get Code</string>
    <string name="invalid_Phone_Number">invalid Phone Number</string>
    <string name="You_are_not_a_User_Please_register_first">You are not a User Please register first</string>
    <string name="back">Back</string>
    <string name="Request_time_out">Request time out</string>
    <string name="Verification_Failed">Verification Failed</string>
    <string name="OTP_Verify">OTP Verify</string>
    <string name="Please_Wait_Until_Code_is_verified">Please Wait Until Code is verified…</string>
    <string name="Verified_Successfully">Verified Successfully</string>
    <string name="verification_Code_Failed">Verification Code Failed</string>
    <string name="Verification">Verification</string>
    <string name="Enter_Verification_Code">Enter Verification Code</string>
    <string name="Verify">Verify</string>
    <string name="Reset">Reset</string>
    <string name="Password_rest_successfully">Password reset successfully</string>
    <string name="Cancel">Cancel</string>
    <string name="Update_Version">Update Version</string>
    <string name="has_new_version">\thas new Version\t</string>
    <string name="please_update">\tPlease Update..</string>
    <string name="Update">Update</string>
    <string name="Exit">Exit</string>
    <string name="Weak_Password">Weak Password!</string>
    <string name="Enter_your_birthday_please">Enter your birthday please!</string>
    <string name="Congratulations_Your_Account_created_Successfully">Congratulations!! Your Account created Successfully</string>
    <string name="This_phone_number_is_exist_try_another_one">This phone number is exist try another one..</string>
    <string name="No_internet_connection">No internet connection..</string>
    <string name="add">Add\t</string>
    <string name="of_eligible_items_to_your_order_to_qualify_for">"\tof eligible items to your order to qualify for "</string>
    <string name="FREE_Shipping">FREE Shipping.</string>
    <string name="Your_order_qualifies_for">Your order qualifies for</string>
    <string name="Remove_Form_Cart">Remove From Cart</string>
    <string name="Remove">Remove</string>
    <string name="There_is_No_Cart">There is No Cart</string>
    <string name="sort">Sort</string>
    <string name="HighToLow">HighToLow</string>
    <string name="LowToHigh">LowToHigh</string>
    <string name="Delivered_by">Delivered by</string>
    <string name="Once_you_place_order_you_cant_remove_it">Once you place an order you can\'t remove it</string>
    <string name="placing_an_order">placing an order</string>
    <string name="Place">Place</string>
    <string name="you_should_enter_your_address">you should enter your address!</string>
    <string name="open_the_GPS_please">open the GPS please!</string>
    <string name="Error_No_internet_connection">Error No internet connection</string>
    <string name="Order_Placed_successfully">Order Placed successfully</string>
    <string name="No_Orders_yet">No Orders yet..</string>
    <string name="Category_Summary">Category Summary</string>
    <string name="in_stoke">in stoke</string>
    <string name="SOLD_OUT">SOLD OUT</string>
    <string name="sold_by">sold by\t</string>
    <string name="Say_what_you_wanna">Say what you want to…</string>
    <string name="Say_all_for_all_Product">Say all for all Product!</string>
    <string name="Remove_from_Cart">Remove from Cart</string>
    <string name="Add_to_Cart">Add to Cart</string>
    <string name="birthday">Birthday</string>
    <string name="product_information">Product Information</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price_egp">Price (EGP)</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">Add product</string>
    <string name="select_product_category">Select Product Category</string>
    <string name="fashion">Fashion</string>
    <string name="furniture">Furniture</string>
    <string name="healthy_amp_beauty"><![CDATA[Healthy & Beauty]]></string>
    <string name="watches">Watches</string>
    <string name="pc_amp_accessories"><![CDATA[PC & Accessories]]></string>
    <string name="tvs">TVs</string>
    <string name="mobiles_amp_tablets"><![CDATA[Mobiles & Tablets]]></string>
    <string name="sports">Sports</string>
    <string name="shipment_no">Shipment no</string>
    <string name="order_date">order date</string>
    <string name="show_delivered_location_on_map">\t\tShow Delivered Location on map</string>
    <string name="grand_total">\tGRAND TOTAL</string>
    <string name="approve_order">Approve Order</string>
    <string name="enter_your_phone_number">Enter Your Phone Number\t\t</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password\t\t</string>
    <string name="sort_by">Sort By</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="cart">Cart</string>
    <string name="sub_total">Sub Total:\t\t</string>
    <string name="proceed_to_checkout">proceed to checkout</string>
    <string name="Order_Summary">Order Summary</string>
    <string name="specify_delivery_location">Specify Delivery Location</string>
    <string name="no_address">No address</string>
    <string name="git_my_location">Git My Location</string>
    <string name="show_in_map">Show in map</string>
    <string name="shipment_shipped_locally">Shipment (Shipped locally)</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="payment_option">Payment option</string>
    <string name="cod_fees">+ COD Fees</string>
    <string name="shipping">+ Shipping</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="place_order">Place Order</string>
    <string name="all_prices_include_vat">All prices include VAT</string>
    <string name="receipt">Receipt:</string>
    <string name="brand">Brand:</string>
    <string name="description">Description</string>
    <string name="show_summary">Show Summary</string>
    <string name="eligible_for">Eligible for\t</string>
    <string name="voice_search">Voice search</string>
    <string name="logout">Logout</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="Name_is_Empty">Name is Empty</string>

</resources>