<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/sort_by"
        android:textAllCaps="true"
        android:textColor="@color/colorBG"
        android:textSize="@dimen/_16sdp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/highToLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layoutDirection="rtl"
            android:text="@string/price_high_to_low"
            android:textColor="@color/colorOutStoke"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:layoutDirection="rtl"
            android:text="@string/price_low_to_high"
            android:textColor="@color/colorOutStoke"
            android:textSize="18sp" />
    </RadioGroup>


</LinearLayout>