<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LoginActivity"
    android:background="@color/colorLoginBG"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_transparent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_13sdp"
                android:maxLength="11"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/_10sdp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rey.material.widget.CheckBox
                android:id="@+id/Chbx_rememberme"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/remember_me"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:cbd_strokeColor="@color/colorPrimary" />

            <TextView android:id="@+id/txt_forgetPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/Btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/solid_button_layout_ripple"
            android:text="@string/login"
            android:textColor="@color/colorBG" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView android:id="@+id/txt_not_admin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/i_m_not_an_admin"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone"/>
            <TextView android:id="@+id/txt_admin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/i_m_an_admin"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
