<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegBG"
    tools:context=".ui.main.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">
        <ImageButton android:id="@+id/reg_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="#00FFFFFF"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_transparent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_birthDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/birthday"
                android:drawableRight="@drawable/ic_baseline_calendar_today_24"
                android:inputType="date"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparent_layout_with_border"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxStrokeColor="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edtxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_layout_with_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/Btn_createAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/solid_button_layout_ripple"
            android:text="@string/create_account"
            android:textColor="@color/colorBG" />


    </LinearLayout>


</ScrollView>